[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.46.0",
    "xgboost>=3.0.2",
    "xlsxwriter>=3.2.5",
]
